# a.ni.me-backend

./: .env.example  Cargo.toml  Dockerfile  README.md  bun.lockb  package.json  server.ts  tsconfig.json
api/: auth.ts  callback.ts  image.ts  latest.ts
api/anime/: [anime].ts
cache/: 9253.json
routes/: auth.ts  release.ts
src/: main.rs
utils/: syncRelease.ts  validateLatest.ts
